[package]
name = "axum_example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio", "ws", "json"] }
bb8 = "0.8"
diesel = "2"
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.16", features = ["derive"] }
either = "1"
uuid = { version = "1.7", features = ["serde", "v3"] }
jsonwebtoken = "9.2"
chrono = "0.4"
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
time = "0.3"
anyhow = { version = "1", default-features = false }
axum-macros = "0.4"
mongodb = {version = "2.8"}
oauth2 = { version="4.4" }
